refactor(core): rename source directory from 'src' to 'nl_find'
This major refactoring renames the main source directory from 'src' to 'nl_find'
to better reflect the project name and improve clarity. All imports across
the codebase have been updated to reflect this change.

BREAKING CHANGE: The package structure has changed from 'src' to 'nl_find'.
Users referencing the old 'src' module will need to update their imports.

- Rename src/ directory to nl_find/
- Update all imports from 'src' to 'nl_find' across all modules
- Update documentation references in README.md, GEMINI.md, and docs/
- Update pyproject.toml to reference new module name
- Update all test imports to use new module structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,14 +45,22 @@ dev = [
     "isort>=5.12",
     "ruff>=0.1",
 ]
-all = ["nl-find[gui,dev]"]
+all = [
+    "PyQt6>=6.5",
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+    "pytest-asyncio>=0.21",
+    "black>=23.0",
+    "isort>=5.12",
+    "ruff>=0.1",
+]
 
 [project.scripts]
-nfi = "src.cli.app:main"
+nfi = "nl_find.cli.app:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["src*"]
+include = ["nl_find*"]
 
 [tool.black]
 line-length = 88
